infra/openshift/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-ai-deskhelp-app
  labels:
    app: frontend-ai-deskhelp-app
    part: angular

spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-ai-deskhelp-app
      part: angular

  template:
    metadata:
      labels:
        app: frontend-ai-deskhelp-app
        part: angular

    spec:
      # imagePullSecrets:
      #  - name: ghcr-secret
      containers:
        - name: frontend-ai-deskhelp
          image: ghcr.io/rashids10/frontend-ai-deskhelp:v2
          imagePullPolicy: IfNotPresent

          livenessProbe: # Anwendung lebt noch?
            httpGet:
              path: / # Liveness-Endpunkt
              port: 8080 # frontend Port
            initialDelaySeconds: 30 # Nach Start 30 Sekunden warten
            periodSeconds: 10 # Alle 10 Sekunden prüfen

          readinessProbe: # Anwendung bereit für Traffic?
            httpGet:
              path: / # Readiness-Endpunkt
              port: 8080 # frontend Port
            initialDelaySeconds: 15 # Nach Start 15 Sekunden warten
            periodSeconds: 5 # Alle 5 Sekunden prüfen

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend-ai-deskhelp-app
    part: angular

spec:
  type: ClusterIP

  selector:
    app: frontend-ai-deskhelp-app
    part: angular

  ports:
    - port: 8081
      targetPort: 8080
