infra/openshift/ollama-deyployment.yaml

# Deployment erstellt und verwaltet den Ollama-Pod
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ollama-ai-deskhelp

  labels:
    app: ollama-ai-deskhelp
    part: ollama

spec:
  replicas: 1 # Ein Ollama-Pod reicht aus

  selector:
    matchLabels:
      app: ollama-ai-deskhelp
      part: ollama

  template:
    metadata:
      labels:
        app: ollama-ai-deskhelp
        part: ollama

    spec:
      containers:
        - name: ollama-ai-deskhelp

          # Offizielles Ollama Docker Image
          image: ollama/ollama:latest

          startupProbe:
            httpGet:
              path: /api/tags
              port: 11434
            initialDelaySeconds: 10 # Nach Start 10 Sekunden warten
            periodSeconds: 10 # Alle 10 Sekunden prüfen
            failureThreshold: 30 # Maximal 30 Fehlversuche
            timeoutSeconds: 5

          livenessProbe: # Anwendung lebt noch?
            httpGet:
              path: /api/tags
              port: 11434
            periodSeconds: 10 # Alle 10 Sekunden prüfen
            failureThreshold: 3 # Nach 3 Fehlern Neustart
            timeoutSeconds: 5

          readinessProbe: # Anwendung bereit für Traffic?
            httpGet:
              path: /api/tags
              port: 11434
            periodSeconds: 5 # Alle 5 Sekunden prüfen
            failureThreshold: 3 # Nach 3 Fehlern nicht bereit
            timeoutSeconds: 5

          ports:
            # Ollama API läuft auf Port 11434
            - containerPort: 11434

          volumeMounts:
            # Modelle werden hier gespeichert
            # z.B. phi3, llama3, mxbai-embed-large
            - name: ollama-storage
              mountPath: /tmp/ollama

          resources:
            # Mindestressourcen die Kubernetes reservieren soll
            requests:
              cpu: "4000m" # 4 CPU-Cores
              memory: "4Gi" # 2 GB RAM

            # Maximale Ressourcen die Ollama nutzen darf
            limits:
              cpu: "4000m" # Bis zu 4 CPU-Cores
              memory: "8Gi" # Bis zu 8 GB RAM

      volumes:
        - name: ollama-storage

          # Verknüpfung zum PVC
          persistentVolumeClaim:
            claimName: ollama-pvc

---

# Service macht Ollama innerhalb des Clusters erreichbar
apiVersion: v1
kind: Service

metadata:
  name: ollama-service

  labels:
    app: ollama-ai-deskhelp
    part: ollama

spec:
  # Nur innerhalb des Kubernetes-Clusters erreichbar
  type: ClusterIP

  selector:
    app: ollama-ai-deskhelp
    part: ollama

  ports:
    - name: http

      # Port über den andere Pods Ollama ansprechen
      port: 11434

      # Weiterleitung zum Container-Port
      targetPort: 11434
