infra/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend-api-route
  annotations:
    haproxy.router.openshift.io/timeout: 15m
spec:
  host:  ai-deskhelp-rashid-test.apps.lab.app2cloud.adesso-projects.com
  path: /api
  to:
    kind: Service
    name: backend-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend-rag-route
  annotations:
    haproxy.router.openshift.io/timeout: 15m
spec:
  host: ai-deskhelp-rashid-test.apps.lab.app2cloud.adesso-projects.com
  path: /rag
  to:
    kind: Service
    name: backend-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-route
  annotations:
    haproxy.router.openshift.io/timeout: 5m
spec:
  host: ai-deskhelp-rashid-test.apps.lab.app2cloud.adesso-projects.com
  path: /
  to:
    kind: Service
    name: frontend-service
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect

# Architektur
#---------------------------#

# Browser
#    ↓
# OpenShift Router (HAProxy)
#    ↓
# Route
#    ↓
# Service
#    ↓
# Pod
